gobmkida/c2/gg_set_rand_state
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:655:12: error: expected expression
*( _OWORD *)&x[20] = *( _OWORD *)&state->x[20]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:655:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&x[20] = *( _OWORD *)&state->x[20]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:655:33: error: expected expression
*( _OWORD *)&x[20] = *( _OWORD *)&state->x[20]; 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:655:25: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&x[20] = *( _OWORD *)&state->x[20]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:656:12: error: expected expression
*( _OWORD *)&x[16] = *( _OWORD *)&state->x[16]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:656:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&x[16] = *( _OWORD *)&state->x[16]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:656:33: error: expected expression
*( _OWORD *)&x[16] = *( _OWORD *)&state->x[16]; 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:656:25: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&x[16] = *( _OWORD *)&state->x[16]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:657:17: error: expected expression
v1 = *( _OWORD *)state->x; 
                ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:657:9: error: use of undeclared identifier '_OWORD'
v1 = *( _OWORD *)state->x; 
        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:658:17: error: expected expression
v2 = *( _OWORD *)&state->x[4]; 
                ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:658:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)&state->x[4]; 
        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:659:17: error: expected expression
v3 = *( _OWORD *)&state->x[8]; 
                ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:659:9: error: use of undeclared identifier '_OWORD'
v3 = *( _OWORD *)&state->x[8]; 
        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:660:12: error: expected expression
*( _OWORD *)&x[12] = *( _OWORD *)&state->x[12]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:660:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&x[12] = *( _OWORD *)&state->x[12]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:660:33: error: expected expression
*( _OWORD *)&x[12] = *( _OWORD *)&state->x[12]; 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:660:25: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&x[12] = *( _OWORD *)&state->x[12]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:661:12: error: expected expression
*( _OWORD *)&x[8] = v3; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:661:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&x[8] = v3; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:662:12: error: expected expression
*( _OWORD *)&x[4] = v2; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:662:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&x[4] = v2; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:663:12: error: expected expression
*( _OWORD *)x = v1; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/utils/random.c:663:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x = v1; 
   ^
24 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_set_rand_state/src/obj/5/random.o] Error 1
